feat: finish user email confirmation with testing
